--- a/index.html
+++ b/index.html
@@ -46,24 +46,14 @@
     </tr>
   </table>
 <form action="detail.html" method="get">
-  <ul style="list-style: none;">
     <h2>お問い合わせ</h2>
-    <li>
       <label for="name">会社名</label>
-      <input type="text" name="name" id="name">
-    </li>
-    <li>
+      <input type="text" name="name" id="name"><br>
       <label for="name" >お名前</label>
-      <input type="text" name="name" id="name">
-    </li>
-    <li>
+      <input type="text" name="name" id="name"><br>
       <label for="name">メールアドレス</label>
-      <input type="text" name="name" id="name">
-    </li>
-    <li>
+      <input type="text" name="name" id="name"><br>
       <th>お問い合わせ内容<textarea name="textarea" cols="60" rows="10"></textarea></th>
-    </li>
-  </ul>
 </form>
 <input type="submit" value="お申し込み"><br>
 <small>&copy; 2020 TECH inc.</small>
