--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
       <input type="text" name="name" id="name"><br>
       <label for="name">メールアドレス</label>
       <input type="text" name="name" id="name"><br>
-      <th>お問い合わせ内容<textarea name="textarea" cols="60" rows="10"></textarea></th>
+      お問い合わせ内容<textarea name="textarea" cols="60" rows="10"></textarea><br>
+      <input type="submit" value="お申し込み"><br>
 </form>
-<input type="submit" value="お申し込み"><br>
 <small>&copy; 2020 TECH inc.</small>
 </body>
 </html>
