--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
       <input type="text" name="name" id="name"><br>
       <label for="name">メールアドレス</label>
       <input type="text" name="name" id="name"><br>
-      お問い合わせ内容<textarea name="textarea" cols="60" rows="10"></textarea><br>
+      <label for="name">お問い合わせ内容</label>
+      <textarea name="textarea" cols="60" rows="10"></textarea><br>
       <input type="submit" value="お申し込み"><br>
 </form>
 <small>&copy; 2020 TECH inc.</small>
